Added estilos css

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -9,6 +9,10 @@
     ;
 } */
 
+#root {
+    margin-bottom: 300px;
+}
+
 
 /* listado */
 
@@ -40,5 +44,17 @@
     margin-bottom: 200px;
 }
 
+.trending-tittle {
+    padding: 100px 100px;
+    background-image: linear-gradient(135deg, #7989fb 0, #486ee5 50%, #0054cf 100%);
+    
+}
 
+.trending-tittle h1 {
+    font-size: 45px;
+}
 
+.buscaste-tittle {
+    background-image: linear-gradient(135deg, #7989fb 0, #486ee5 50%, #0054cf 100%);
+    padding: 30px  30px;
+}
