--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,7 +22,7 @@
 
 }
 
-.favourite-btn {
+/* .favourite-btn {
     width: 30px;
     height: 30px;
     background-color: blue ;
@@ -35,7 +35,7 @@
     top: 10px;
     border: none;
 
-}
+} */
 
 /* resultados */
 
